@@ -1078,7 +1078,7 @@
 </td>
 <td class=cellinside>2016-01-25
 </td>
-<td class=cellinside>19:38:40
+<td class=cellinside>19:39:13
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot<br /> introduced by Galbraith & Green (1990)<br />  R Luminescence Package Team
@@ -1131,11 +1131,11 @@
 </td>
 <td class=cellinside><br /> A dose response curve is produced for luminescence measurements using a<br /> regenerative protocol.<br />
 </td>
-<td class=cellinside>1.8.3
+<td class=cellinside>1.8.4
 </td>
 <td class=cellinside>2016-01-25
 </td>
-<td class=cellinside>16:15:55
+<td class=cellinside>21:01:05
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
