@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.3 by xtable 1.8-0 package
-% Mon Jan 25 19:40:51 2016
+% Mon Jan 25 21:04:48 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -101,13 +101,13 @@
   53 & methods\_RLum & methods\_RLum & $<$br /$>$ Methods for S3-generics implemented for the package 'Luminescence'.$<$br /$>$ This document summarises all implemented S3-generics. The name of the function$<$br /$>$ is given before the first dot, after the dot the name of the object that is supported by this method$<$br /$>$ is given, e.g.  plot.RLum.Data.Curve  can be called by  plot(object, ...) , where$<$br /$>$ object  is the  RLum.Data.Curve  object.$<$br /$>$ &  &  &  &  \\ 
   54 & names\_RLum & S4-names function for RLum S4 class objects & $<$br /$>$ Function calls object-specific names functions for RLum S4 class objects.$<$br /$>$ & 0.1.0 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  55 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.7 & 2016-01-25 & 19:38:40
+  55 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.7 & 2016-01-25 & 19:39:13
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
   56 & plot\_DetPlot & Create De(t) plot & $<$br /$>$ Plots the equivalent dose (De) in dependency of the chosen signal integral (cf. Bailey et al., 2003).$<$br /$>$ The function is simply passing several arguments to the function  plot  and the used$<$br /$>$ analysis functions and runs it in a loop. Example:  legend.pos  for legend position,$<$br /$>$ legend  for legend text.$<$br /$>$ & 0.1.0 & 2016-01-18 & 15:07:03
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   57 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  58 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.3 & 2016-01-25 & 16:15:55
+  58 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.4 & 2016-01-25 & 21:01:05
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   59 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2016-01-19 & 20:14:49
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
